WebCore:

Reviewed by Darin Adler.

        - fix http://bugs.webkit.org/show_bug.cgi?id=14134
          <rdar://problem/5655160> REGRESSION (r25353): Whitespace nodes ignored between inline list items

        Test: fast/dynamic/create-renderer-for-whitespace-only-text.html

        * dom/Node.cpp:
        (WebCore::Node::attach): Added code to check if this node's renderer
        has become the "previous renderer" of any sibling text node, and if so,
        ensure that that node gets a renderer if it now needs one.
        (WebCore::Node::createRendererIfNeeded): Removed the assertion that the
        node is not attached.

LayoutTests:

        Reviewed by Darin Adler.

        - test and updated results for http://bugs.webkit.org/show_bug.cgi?id=14134
          <rdar://problem/5655160> REGRESSION (r25353): Whitespace nodes ignored between inline list items

        * fast/dynamic/create-renderer-for-whitespace-only-text.html: Added.
        * fast/dynamic/style-access-late-stylesheet-load-expected.txt:
        * platform/mac-leopard/fast/dynamic: Added.
        * platform/mac-leopard/fast/dynamic/create-renderer-for-whitespace-only-text-expected.checksum: Added.
        * platform/mac-leopard/fast/dynamic/create-renderer-for-whitespace-only-text-expected.png: Added.
        * platform/mac/editing/deleting/delete-block-merge-contents-001-expected.txt:
        * platform/mac/editing/deleting/delete-block-merge-contents-019-expected.txt:
        * platform/mac/editing/deleting/delete-block-merge-contents-020-expected.txt:
        * platform/mac/editing/inserting/editable-html-element-expected.txt:
        * platform/mac/editing/inserting/editing-empty-divs-expected.txt:
        * platform/mac/editing/pasteboard/paste-TIFF-expected.txt:
        * platform/mac/editing/selection/4983858-expected.txt:
        * platform/mac/editing/selection/5136696-expected.txt:
        * platform/mac/editing/selection/drag-to-contenteditable-iframe-expected.txt:
        * platform/mac/editing/style/remove-underline-across-paragraph-expected.txt:
        * platform/mac/editing/style/remove-underline-across-paragraph-in-bold-expected.txt:
        * platform/mac/editing/style/remove-underline-after-paragraph-expected.txt:
        * platform/mac/editing/style/remove-underline-after-paragraph-in-bold-expected.txt:
        * platform/mac/editing/style/remove-underline-from-stylesheet-expected.txt:
        * platform/mac/fast/dynamic/create-renderer-for-whitespace-only-text-expected.txt: Added.
        * platform/mac/fast/dynamic/move-node-with-selection-expected.txt:
        * platform/mac/fast/forms/input-align-expected.txt:
        * platform/mac/fast/inline/positionedLifetime-expected.txt:



Canonical link: https://commits.webkit.org/22893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29054 268f45cc-cd09-0410-ab3c-d52691b4dbfc